IE11: fix Acitvity Panel tab icons missing and wrong alignment (https://github.com/woocommerce/woocommerce-admin/pull/345)

--- a/plugins/woocommerce-admin/client/layout/activity-panel/style.scss
+++ b/plugins/woocommerce-admin/client/layout/activity-panel/style.scss
@@ -64,6 +64,8 @@
 	}
 
 	.woocommerce-layout__activity-panel-tab {
+		flex-direction: column;
+		justify-content: center;
 		border: none;
 		outline: none;
 		cursor: pointer;
